refactor: refactor the projects's overview page and remove unused components
