# docs/swagger.json
@@ -2523,6 +2523,9 @@
                 "description": {
                     "type": "string"
                 },
+                "emoji": {
+                    "type": "string"
+                },
                 "name": {
                     "type": "string"
                 },
@@ -2682,6 +2685,9 @@
             "type": "object",
             "properties": {
                 "description": {
+                    "type": "string"
+                },
+                "emoji": {
                     "type": "string"
                 },
                 "name": {
@@ -2885,6 +2891,9 @@
                 "description": {
                     "type": "string"
                 },
+                "emoji": {
+                    "type": "string"
+                },
                 "id": {
                     "type": "integer"
                 },
@@ -2961,6 +2970,9 @@
                     "type": "string"
                 },
                 "description": {
+                    "type": "string"
+                },
+                "emoji": {
                     "type": "string"
                 },
                 "id": {
